gallery spacing issue

--- a/src/pages/gallery/gallery.css
+++ b/src/pages/gallery/gallery.css
@@ -14,6 +14,11 @@
     columns: 2;
   }
 
-  .gallery__container img.gallery__last { margin-bottom: 0 !important;
+  .gallery__container img.gallery__last {
+    margin-bottom: 0 !important;
   }
+
+  .gallery__bathroom {
+  margin-bottom: 0;
+}
 }
